downgrade to Java8 and use matrix build (#49)
* downgrade to Java8 and use matrix build